<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>JPassport</groupId>
        <artifactId>JPassport-parent</artifactId>
        <version>0.6.0-20</version>
    </parent>

    <artifactId>JPassport-main</artifactId>
    <version>0.6.0-20</version>

<!--    <name>JPassport</name>-->
    <packaging>jar</packaging>
    <description>A Java library for interfacing with the foreign linker API.</description>
    <url>https://github.com/boulder-on/JPassport#readme</url>

    <properties>
        <maven.compiler.source>20</maven.compiler.source>
        <maven.compiler.target>20</maven.compiler.target>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>20</release> <!-- <release>13/14/15</release> -->
                        <compilerArgs>--enable-preview</compilerArgs>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>20</source>
                    <target>20</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>